[package]
name = "ip-lookup"
version = "0.1.0"
edition = "2024"
authors = ["Canmi (Canmi21) <canmicn@gmail.com>"]
description = "A unified IP geolocation query library using multiple free public providers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rfshub/ip-lookup"
keywords = ["ip", "geolocation", "lookup", "network", "location"]
categories = ["network-programming", "command-line-utilities"]
documentation = "https://docs.rs/ip-lookup"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[lib]
name = "ip_lookup"
path = "src/lib.rs"